--- a/pomodoro-app/package.json
+++ b/pomodoro-app/package.json
@@ -17,7 +17,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3500 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -43,5 +43,6 @@
   "devDependencies": {
     "concurrently": "^9.1.2",
     "tailwindcss": "^3.4.17"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
